syntax = "proto3";

package xibc.core.client.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/teleport-network/teleport/x/xibc/core/client/types";

// EventCreateClientProposal is emitted on create client proposal
message EventCreateClientProposal {
  string chain_name = 1;
  string client_type = 2;
  string consensus_height = 3;
}

// EventUpdateClient is emitted on update client
message EventUpdateClient {
  string chain_name = 1;
  string client_type = 2;
  string consensus_height = 3;
  string header = 4;
}

// EventUpgradeClientProposal is emitted on upgrade client proposal
message EventUpgradeClientProposal {
  string chain_name = 1;
  string client_type = 2;
  string consensus_height = 3;
}
